feat: Enhance scanner functionality and add validation scripts
- Updated `docker-entrypoint.sh` to allow direct execution of common tools (terraform, tflint, tfsec, checkov, trivy, bicep, cfn-lint) and improved error messaging for unknown commands.
- Modified `scan-gcp.sh` to validate Google Cloud Deployment Manager templates by checking for required sections and improved logging messages.
- Introduced `build-and-test.bat` for building and testing the Docker image with various scanners and tools.
- Added a vulnerable CloudFormation template (`serverless-vulnerable.yaml`) for testing purposes, containing intentional security vulnerabilities.
- Created a vulnerable Dockerfile (`Dockerfile.vulnerable`) with multiple security risks for testing.
- Developed a vulnerable `docker-compose` file (`docker-compose.vulnerable.yml`) exposing various services with security issues.
- Added a Kubernetes deployment file (`vulnerable-deployment.yaml`) with intentional vulnerabilities for testing.
- Created a Terraform configuration file (`kubernetes-clusters.tf`) with security vulnerabilities across multiple cloud providers.
- Implemented validation scripts (`validate-setup.bat`, `validate-setup.ps1`, `validate-setup.sh`) to automate testing of scanner capabilities with sample files.

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,6 @@ Thumbs.db
 # Terraform workspace files
 .terraform/
 
-#docker-push
-push-to-dockerhub.bat
-push-to-dockerhub.sh    
+# #docker-push
+# push-to-dockerhub.bat
+# push-to-dockerhub.sh    
